--- a/index.html
+++ b/index.html
@@ -54,32 +54,26 @@
       <h2>Elige tu plan ideal</h2>
       <div class="plan-grid">
         <div class="plan-item">
-          <h3>Básico</h3>
-          <p class="precio">$9.99/mes</p>
+          <h3>mes</h3>
+          <p class="precio">$6.00</p>
           <ul>
-            <li>Calidad estándar</li>
-            <li>1 pantalla</li>
-            <li>Descargas no disponibles</li>
+            <li>3 pantalla</li>
           </ul>
           <button class="suscribirse-button" data-plan="basico">Suscribirse</button>
         </div>
         <div class="plan-item">
-          <h3>Estándar</h3>
-          <p class="precio">$14.99/mes</p>
+          <h3>3 meses</h3>
+          <p class="precio">$15.00</p>
           <ul>
-            <li>Alta definición (HD)</li>
-            <li>2 pantallas</li>
-            <li>Descargas disponibles</li>
-          </ul>
+            <li>3 pantallas</li>
+            </ul>
           <button class="suscribirse-button" data-plan="estandar">Suscribirse</button>
         </div>
         <div class="plan-item">
-          <h3>Premium</h3>
-          <p class="precio">$19.99/mes</p>
+          <h3>6 meses</h3>
+          <p class="precio">$25.00/mes</p>
           <ul>
-            <li>Ultra alta definición (4K)</li>
-            <li>4 pantallas</li>
-            <li>Descargas disponibles</li>
+            <li>3 pantallas</li>
           </ul>
           <button class="suscribirse-button" data-plan="premium">Suscribirse</button>
         </div>
