--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <h2>Elige tu plan ideal</h2>
       <div class="plan-grid">
         <div class="plan-item">
-          <h3>mes</h3>
+          <h3>1 mes</h3>
           <p class="precio">$6.00</p>
           <ul>
             <li>3 pantalla</li>
