--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <a href="https://wa.me/521234567890?text=¡Hola!%20Tengo%20una%20pregunta." target="_blank" class="contacto-button whatsapp">
           WhatsApp
         </a>
-        <a href="https://t.me/tunombredeusuario" target="_blank" class="contacto-button telegram">
+        <a href="https://t.me/King_234567" target="_blank" class="contacto-button telegram">
           Telegram
         </a>
       </div>
