--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <ul>
             <li>3 pantalla</li>
           </ul>
-          <button class="suscribirse-button" data-plan="basico">Suscribirse</button>
+          <button class="suscribirse-button" data-plan="1 mes">Suscribirse</button>
         </div>
         <div class="plan-item">
           <h3>3 meses</h3>
@@ -67,7 +67,7 @@
           <ul>
             <li>3 pantallas</li>
             </ul>
-          <button class="suscribirse-button" data-plan="estandar">Suscribirse</button>
+          <button class="suscribirse-button" data-plan="3 meses">Suscribirse</button>
         </div>
         <div class="plan-item">
           <h3>6 meses</h3>
@@ -75,7 +75,7 @@
           <ul>
             <li>3 pantallas</li>
           </ul>
-          <button class="suscribirse-button" data-plan="premium">Suscribirse</button>
+          <button class="suscribirse-button" data-plan="6 meses">Suscribirse</button>
         </div>
       </div>
     </section>
