--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <div class="plan-item">
           <h3>6 meses</h3>
-          <p class="precio">$25.00/mes</p>
+          <p class="precio">$25.00</p>
           <ul>
             <li>3 pantallas</li>
           </ul>
